[fixed] global write button z-index

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -128,6 +128,7 @@
     background-color: #da382e;
     box-shadow: 0 2px 16px 0 rgba(137, 139, 147, 0.51);
     text-align: center;
+    z-index: 9999;
 }
 
 .global-write-button img {
